/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package magma.orc8r.mproto_test;
option go_package = "test";

// TestDataBasic contains basic field types for testing deterministic encoding.
message TestDataBasic {
  string key = 1;
  int32 value = 2;
}

// TestDataCompound contains compound field types for testing deterministic encoding.
message TestDataCompound {
  string id = 1;
  TestDataBasic single_data = 2;
  map<string, TestDataBasic> data_map = 3;
  repeated TestDataBasic data_slice = 4;
}
